<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookActivity"
    android:padding="5dp"
    android:layout_marginEnd="15dp"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/txtTitleBookView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/mate_sc"
                android:text="@string/book_title"
                android:textColor="@color/foreground"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtAuthorBookView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/mate_sc"
                android:text="@string/author_name"
                android:textColor="@color/background"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/txtTitleBookView"
                app:layout_constraintStart_toStartOf="@+id/txtTitleBookView"
                app:layout_constraintTop_toBottomOf="@+id/txtTitleBookView" />

            <ImageView
                android:id="@+id/imgBookView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:layout_constraintEnd_toEndOf="@+id/txtAuthorBookView"
                app:layout_constraintStart_toStartOf="@+id/txtAuthorBookView"
                app:layout_constraintTop_toBottomOf="@+id/txtAuthorBookView"
                android:layout_marginTop="15dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txtPagesBookView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/n_a_pages"
                android:fontFamily="@font/mate_sc"
                android:textColor="@color/foreground"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/imgBookView"
                app:layout_constraintStart_toStartOf="@+id/imgBookView"
                app:layout_constraintTop_toBottomOf="@+id/imgBookView" />

            <TextView
                android:id="@+id/txtDescHeaderBookView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/mate_sc"
                android:text="@string/description"
                android:textColor="@color/foreground"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

            <TextView
                android:id="@+id/txtDescBookView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_goes_here"
                android:textColor="@color/foreground_alt"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="@+id/txtDescHeaderBookView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/txtDescHeaderBookView"
                app:layout_constraintTop_toBottomOf="@+id/txtDescHeaderBookView" />

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/txtPagesBookView"
                app:layout_constraintStart_toStartOf="@+id/txtPagesBookView"
                app:layout_constraintTop_toBottomOf="@+id/txtPagesBookView">

                <Button
                    android:id="@+id/btnCurrentlyReadingBookView"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_toEndOf="@id/btnAlreadyReadBookView"
                    android:text="@string/currently_reading"
                    android:textSize="12sp"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnAlreadyReadBookView"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textSize="12sp"
                    android:text="@string/already_read"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnFavouritesBookView"
                    android:layout_width="105dp"
                    android:textSize="12sp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_toEndOf="@+id/btnCurrentlyReadingBookView"
                    android:text="@string/favourite_this"
                    android:textAllCaps="false" />

            </RelativeLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:id="@+id/btnDeleteBookView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/txtDescBookView"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout><?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookActivity"
    android:padding="5dp"
    android:layout_marginEnd="15dp"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/txtTitleBookView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/mate_sc"
                android:text="@string/book_title"
                android:textColor="@color/foreground"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtAuthorBookView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/mate_sc"
                android:text="@string/author_name"
                android:textColor="@color/background"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/txtTitleBookView"
                app:layout_constraintStart_toStartOf="@+id/txtTitleBookView"
                app:layout_constraintTop_toBottomOf="@+id/txtTitleBookView" />

            <ImageView
                android:id="@+id/imgBookView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:layout_constraintEnd_toEndOf="@+id/txtAuthorBookView"
                app:layout_constraintStart_toStartOf="@+id/txtAuthorBookView"
                app:layout_constraintTop_toBottomOf="@+id/txtAuthorBookView"
                android:layout_marginTop="15dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txtPagesBookView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/n_a_pages"
                android:fontFamily="@font/mate_sc"
                android:textColor="@color/foreground"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/imgBookView"
                app:layout_constraintStart_toStartOf="@+id/imgBookView"
                app:layout_constraintTop_toBottomOf="@+id/imgBookView" />

            <TextView
                android:id="@+id/txtDescHeaderBookView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/mate_sc"
                android:text="@string/description"
                android:textColor="@color/foreground"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

            <TextView
                android:id="@+id/txtDescBookView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_goes_here"
                android:textColor="@color/foreground_alt"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="@+id/txtDescHeaderBookView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/txtDescHeaderBookView"
                app:layout_constraintTop_toBottomOf="@+id/txtDescHeaderBookView" />

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/txtPagesBookView"
                app:layout_constraintStart_toStartOf="@+id/txtPagesBookView"
                app:layout_constraintTop_toBottomOf="@+id/txtPagesBookView">

                <Button
                    android:id="@+id/btnCurrentlyReadingBookView"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_toEndOf="@id/btnAlreadyReadBookView"
                    android:text="@string/currently_reading"
                    android:textSize="12sp"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnAlreadyReadBookView"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textSize="12sp"
                    android:text="@string/already_read"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnFavouritesBookView"
                    android:layout_width="105dp"
                    android:textSize="12sp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_toEndOf="@+id/btnCurrentlyReadingBookView"
                    android:text="@string/favourite_this"
                    android:textAllCaps="false" />

            </RelativeLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:id="@+id/btnDeleteBookView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/txtDescBookView"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>